examples/bad/continue-outside-loop.elina
fn f(): void {
  while (true) {
  }
  continue;
}

fn main(): void {
  f();
}